# jsr-hydra

./: .env.example  .gitignore  AUDIT_REPORT.md  Makefile  ONECONTEXT_SETUP.md  codebase.md  context.md  docker-compose.yml  version.json
backend/: .dockerignore  .ruff.toml  Dockerfile  alembic.ini  pyproject.toml  pytest.ini
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py
backend/app/: main.py  version.py
backend/app/api/: __init__.py  auth.py  routes_brain.py  routes_chart_vision.py  routes_settings.py  routes_strategies.py  routes_strategy_builder.py  routes_system.py  routes_trades.py  routes_webhook.py  routes_ws.py
backend/app/brain/: BRAIN_CODE_OVERVIEW.md  BRAIN_FLOW_MAP.md  __init__.py  analyzer.py  auto_allocator.py  brain.py  learner.py  llm_brain.py  llm_memory.py  llm_structured.py  memory.py  paths.py  patterns.py  prompts.py  sentiment.py  strategy_xp.py
backend/app/bridge/: __init__.py  account_info.py  connector.py  data_feed.py  order_manager.py  synthetic_feed.py
backend/app/chart_vision/: __init__.py  analyzer.py
backend/app/config/: __init__.py  constants.py  runtime_settings.py  settings.py
backend/app/core/: rate_limit.py
backend/app/db/: base.py  engine.py  seed.py  seed_runner.py
backend/app/engine/: __init__.py  engine.py  engine_runner.py  regime_detector.py  retrainer.py
backend/app/events/: __init__.py  bus.py  handlers.py  (+1 more)
backend/tests/: conftest.py  test_indicators.py  test_llm_brain_errors.py  test_math_utils.py  test_risk.py  test_schemas.py  test_time_utils.py  test_validators.py
(+122 files in other folders)
